Update names in f1 task notebooks

--- a/f1/driver-top3/qualifying.ipynb
+++ b/f1/driver-top3/qualifying.ipynb
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "with open('f1/qualifying/feats.sql', 'r') as f:\n",
+    "with open('f1/driver-top3/feats.sql', 'r') as f:\n",
     "    # run once with train_labels and once with val_labels\n",
     "    template = f.read()\n",
     "\n",
@@ -151,7 +151,7 @@
     }
    ],
    "source": [
-    "utils.validate_feature_tables('qualifying', conn)"
+    "utils.validate_feature_tables('driver-top3', conn)"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "from qualifying_train_feats"
+    "from driver_top3_train_feats"
    ]
   },
   {
@@ -584,7 +584,7 @@
     "from inferred_stypes import task_to_stypes\n",
     "from train_gbdt import TASK_PARAMS\n",
     "\n",
-    "TASK = 'rel-f1-qualifying'\n",
+    "TASK = 'rel-f1-driver-top3'\n",
     "\n",
     "task_params = TASK_PARAMS[TASK]"
    ]
@@ -596,7 +596,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "select * from qualifying_train_feats;"
+    "select * from driver_top3_train_feats;"
    ]
   },
   {
@@ -606,7 +606,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "select * from qualifying_val_feats;"
+    "select * from driver_top3_val_feats;"
    ]
   },
   {
