Change dataset.db to get_db()

--- a/stack/stack_eda.ipynb
+++ b/stack/stack_eda.ipynb
@@ -58,7 +58,7 @@
     }
    ],
    "source": [
-    "dataset.db.table_dict.keys()"
+    "dataset.get_db().table_dict.keys()"
    ]
   },
   {
@@ -804,7 +804,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "users = dataset.db.table_dict['users'].df"
+    "users = dataset.get_db().table_dict['users'].df"
    ]
   },
   {
@@ -1040,7 +1040,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "badges = dataset.db.table_dict['badges'].df"
+    "badges = dataset.get_db().table_dict['badges'].df"
    ]
   },
   {
@@ -1417,7 +1417,7 @@
     }
    ],
    "source": [
-    "posts = dataset.db.table_dict['posts'].df\n",
+    "posts = dataset.get_db().table_dict['posts'].df\n",
     "print(f'Total Posts: {len(posts):,}')"
    ]
   },
@@ -2123,7 +2123,7 @@
     }
    ],
    "source": [
-    "post_hist = dataset.db.table_dict['postHistory'].df\n",
+    "post_hist = dataset.get_db().table_dict['postHistory'].df\n",
     "print(f'Total Post History records: {len(post_hist):,}')"
    ]
   },
@@ -2240,7 +2240,7 @@
     }
    ],
    "source": [
-    "votes = dataset.db.table_dict['votes'].df\n",
+    "votes = dataset.get_db().table_dict['votes'].df\n",
     "print(f'Total votes: {len(votes):,}')"
    ]
   },
@@ -2416,7 +2416,7 @@
     }
    ],
    "source": [
-    "comments = dataset.db.table_dict['comments'].df\n",
+    "comments = dataset.get_db().table_dict['comments'].df\n",
     "print(f'Total comments: {len(comments):,}')"
    ]
   },
