--- a/trial/site/site_feature_eng.ipynb
+++ b/trial/site/site_feature_eng.ipynb
@@ -85,7 +85,7 @@
     "def get_features(train_df):\n",
     "    dataset = get_dataset(name='rel-trial', process=False)\n",
     "    task = dataset.get_task('rel-trial-site', process=True)\n",
-    "    tables = dataset.db.table_dict\n",
+    "    tables = dataset.get_db().table_dict\n",
     "\n",
     "    interventions_studies = tables['interventions_studies'].df\n",
     "    conditions_studies = tables['conditions_studies'].df\n",
