--- a/trial/trial_eda.ipynb
+++ b/trial/trial_eda.ipynb
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "dataset.db.table_dict.keys()"
+    "dataset.get_db().table_dict.keys()"
    ]
   },
   {
@@ -1072,7 +1072,7 @@
     }
    ],
    "source": [
-    "for i,j in dataset.db.table_dict.items():\n",
+    "for i,j in dataset.get_db().table_dict.items():\n",
     "    print(i)\n",
     "    display(j.df.head(1))"
    ]
