Change task.train_table to task.get_table("train")

--- a/stack/stack_eda.ipynb
+++ b/stack/stack_eda.ipynb
@@ -120,7 +120,7 @@
     }
    ],
    "source": [
-    "task.train_table.df.columns"
+    "task.get_table(\"train\").df.columns"
    ]
   },
   {
@@ -243,20 +243,20 @@
    "source": [
     "print('TRAIN\\n')\n",
     "\n",
-    "print(f'{len(task.train_table.df):,} samples over {task.train_table.df.OwnerUserId.nunique():,} users.')\n",
+    "print(f'{len(task.get_table(\"train\").df):,} samples over {task.get_table(\"train\").df.OwnerUserId.nunique():,} users.')\n",
     "print()\n",
     "print('Label Distribution:')\n",
-    "print(task.train_table.df.contribution.value_counts(normalize=True))\n",
+    "print(task.get_table(\"train\").df.contribution.value_counts(normalize=True))\n",
     "print()\n",
     "print('Temporal dist of samples:')\n",
-    "print(task.train_table.df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
+    "print(task.get_table(\"train\").df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
     "print()\n",
     "print('Temporal dist of users (first appearance):')\n",
     "print(\n",
     "    # timestamp is sorted in desc order ==> keep='last'\n",
-    "    task.train_table.df\n",
+    "    task.get_table(\"train\").df\n",
     "    .drop_duplicates(subset='OwnerUserId', keep='last')\n",
-    "    .groupby('timestamp').OwnerUserId.nunique() / task.train_table.df.OwnerUserId.nunique()\n",
+    "    .groupby('timestamp').OwnerUserId.nunique() / task.get_table(\"train\").df.OwnerUserId.nunique()\n",
     ")"
    ]
   },
@@ -299,7 +299,7 @@
     "print('Temporal dist of samples:')\n",
     "print(task.val_table.df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
     "print()\n",
-    "print(f'User overlap between train and val: {len(set(task.train_table.df.OwnerUserId) & set(task.val_table.df.OwnerUserId)):,}')"
+    "print(f'User overlap between train and val: {len(set(task.get_table(\"train\").df.OwnerUserId) & set(task.val_table.df.OwnerUserId)):,}')"
    ]
   },
   {
@@ -353,7 +353,7 @@
     }
    ],
    "source": [
-    "task.train_table.df.columns"
+    "task.get_table(\"train\").df.columns"
    ]
   },
   {
@@ -482,26 +482,26 @@
    "source": [
     "print('TRAIN\\n')\n",
     "\n",
-    "print(f'{len(task.train_table.df):,} samples over {task.train_table.df.PostId.nunique():,} posts.')\n",
+    "print(f'{len(task.get_table(\"train\").df):,} samples over {task.get_table(\"train\").df.PostId.nunique():,} posts.')\n",
     "print()\n",
     "print('Temporal dist of samples:')\n",
-    "print(task.train_table.df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
+    "print(task.get_table(\"train\").df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
     "print()\n",
     "print('Temporal dist of posts (first appearance):')\n",
     "print(\n",
     "    # timestamp is sorted in desc order ==> keep='last'\n",
-    "    task.train_table.df\n",
+    "    task.get_table(\"train\").df\n",
     "    .drop_duplicates(subset='PostId', keep='last')\n",
-    "    .groupby('timestamp').PostId.nunique() / task.train_table.df.PostId.nunique()\n",
+    "    .groupby('timestamp').PostId.nunique() / task.get_table(\"train\").df.PostId.nunique()\n",
     ")\n",
     "print()\n",
     "print('Label Distribution:')\n",
-    "mean = task.train_table.df.popularity.mean()\n",
-    "std = task.train_table.df.popularity.std()\n",
+    "mean = task.get_table(\"train\").df.popularity.mean()\n",
+    "std = task.get_table(\"train\").df.popularity.std()\n",
     "print(f'Mean (std): {mean:,.1f} ± {std:,.1f}')\n",
-    "print(f'Median: {task.train_table.df.popularity.quantile(0.5)}')\n",
-    "print(f'Prop zeros: {(task.train_table.df.popularity == 0).mean():.1%}')\n",
-    "fig = px.histogram(x=task.train_table.df.popularity + 1, log_x=True, log_y=True)\n",
+    "print(f'Median: {task.get_table(\"train\").df.popularity.quantile(0.5)}')\n",
+    "print(f'Prop zeros: {(task.get_table(\"train\").df.popularity == 0).mean():.1%}')\n",
+    "fig = px.histogram(x=task.get_table(\"train\").df.popularity + 1, log_x=True, log_y=True)\n",
     "# ^-- add 1 so log scale shows\n",
     "fig.update_layout(xaxis_title='Popularity', yaxis_title='Sample Count')"
    ]
@@ -620,7 +620,7 @@
     }
    ],
    "source": [
-    "task.train_table.df.columns"
+    "task.get_table(\"train\").df.columns"
    ]
   },
   {
@@ -716,20 +716,20 @@
    "source": [
     "print('TRAIN\\n')\n",
     "\n",
-    "print(f'{len(task.train_table.df):,} samples over {task.train_table.df.UserId.nunique():,} users.')\n",
+    "print(f'{len(task.get_table(\"train\").df):,} samples over {task.get_table(\"train\").df.UserId.nunique():,} users.')\n",
     "print()\n",
     "print('Label Distribution:')\n",
-    "print(task.train_table.df.WillGetBadge.value_counts(normalize=True))\n",
+    "print(task.get_table(\"train\").df.WillGetBadge.value_counts(normalize=True))\n",
     "print()\n",
     "print('Temporal dist of samples:')\n",
-    "print(task.train_table.df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
+    "print(task.get_table(\"train\").df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
     "print()\n",
     "print('Temporal dist of users (first appearance):')\n",
     "print(\n",
     "    # timestamp is sorted in desc order ==> keep='last'\n",
-    "    task.train_table.df\n",
+    "    task.get_table(\"train\").df\n",
     "    .drop_duplicates(subset='UserId', keep='last')\n",
-    "    .groupby('timestamp').UserId.nunique() / task.train_table.df.UserId.nunique()\n",
+    "    .groupby('timestamp').UserId.nunique() / task.get_table(\"train\").df.UserId.nunique()\n",
     ")"
    ]
   },
