--- a/trial/adverse/adverse_feature_eng.ipynb
+++ b/trial/adverse/adverse_feature_eng.ipynb
@@ -550,7 +550,7 @@
    "source": [
     "dataset = get_dataset(name='rel-trial', process=False)\n",
     "task = dataset.get_task('rel-trial-adverse', process=True)\n",
-    "train_df = task.train_table.df\n",
+    "train_df = task.get_table(\"train\").df\n",
     "train_df = get_features(train_df)\n",
     "\n",
     "val_df = task.val_table.df\n",
