--- a/trial/site/site_feature_eng.ipynb
+++ b/trial/site/site_feature_eng.ipynb
@@ -267,7 +267,7 @@
     }
    ],
    "source": [
-    "train_df = task.train_table.df\n",
+    "train_df = task.get_table(\"train\").df\n",
     "train_df = get_features(train_df)"
    ]
   },
