--- a/trial/trial_eda.ipynb
+++ b/trial/trial_eda.ipynb
@@ -1110,7 +1110,7 @@
     }
    ],
    "source": [
-    "task.train_table.df.columns"
+    "task.get_table(\"train\").df.columns"
    ]
   },
   {
@@ -1183,20 +1183,20 @@
    "source": [
     "print('TRAIN\\n')\n",
     "\n",
-    "print(f'{len(task.train_table.df):,} samples over {task.train_table.df.nct_id.nunique():,} trials.')\n",
+    "print(f'{len(task.get_table(\"train\").df):,} samples over {task.get_table(\"train\").df.nct_id.nunique():,} trials.')\n",
     "print()\n",
     "print('Label Distribution:')\n",
-    "print(task.train_table.df.outcome.value_counts(normalize=True))\n",
+    "print(task.get_table(\"train\").df.outcome.value_counts(normalize=True))\n",
     "print()\n",
     "print('Temporal dist of samples:')\n",
-    "print(task.train_table.df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
+    "print(task.get_table(\"train\").df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
     "print()\n",
     "print('Temporal dist of trials (first appearance):')\n",
     "print(\n",
     "    # timestamp is sorted in desc order ==> keep='last'\n",
-    "    task.train_table.df\n",
+    "    task.get_table(\"train\").df\n",
     "    .drop_duplicates(subset='nct_id', keep='last')\n",
-    "    .groupby('timestamp').nct_id.nunique() / task.train_table.df.nct_id.nunique()\n",
+    "    .groupby('timestamp').nct_id.nunique() / task.get_table(\"train\").df.nct_id.nunique()\n",
     ")"
    ]
   },
@@ -1239,7 +1239,7 @@
     "print('Temporal dist of samples:')\n",
     "print(task.val_table.df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
     "print()\n",
-    "print(f'User overlap between train and val: {len(set(task.train_table.df.nct_id) & set(task.val_table.df.nct_id)):,}')"
+    "print(f'User overlap between train and val: {len(set(task.get_table(\"train\").df.nct_id) & set(task.val_table.df.nct_id)):,}')"
    ]
   },
   {
@@ -1292,7 +1292,7 @@
     }
    ],
    "source": [
-    "sns.boxplot(task.train_table.df.num_of_adverse_events.values, showfliers=False)"
+    "sns.boxplot(task.get_table(\"train\").df.num_of_adverse_events.values, showfliers=False)"
    ]
   },
   {
@@ -1354,7 +1354,7 @@
     }
    ],
    "source": [
-    "task.train_table.df.num_of_adverse_events.value_counts()"
+    "task.get_table(\"train\").df.num_of_adverse_events.value_counts()"
    ]
   },
   {
@@ -1374,7 +1374,7 @@
     }
    ],
    "source": [
-    "len(task.train_table.df[task.train_table.df.num_of_adverse_events == 0])/len(task.train_table.df)"
+    "len(task.get_table(\"train\").df[task.get_table(\"train\").df.num_of_adverse_events == 0])/len(task.get_table(\"train\").df)"
    ]
   },
   {
@@ -1494,7 +1494,7 @@
    "source": [
     "import numpy as np\n",
     "## check label imbalance\n",
-    "np.sum(np.vstack(task.train_table.df.withdraw_reasons.values), axis = 0)"
+    "np.sum(np.vstack(task.get_table(\"train\").df.withdraw_reasons.values), axis = 0)"
    ]
   },
   {
@@ -1525,7 +1525,7 @@
    ],
    "source": [
     "## check how many labels do each trial have\n",
-    "sns.histplot(np.sum(np.vstack(task.train_table.df.withdraw_reasons.values), axis = 1))"
+    "sns.histplot(np.sum(np.vstack(task.get_table(\"train\").df.withdraw_reasons.values), axis = 1))"
    ]
   },
   {
@@ -1545,7 +1545,7 @@
     }
    ],
    "source": [
-    "len(task.train_table.df.nct_id.unique())"
+    "len(task.get_table(\"train\").df.nct_id.unique())"
    ]
   },
   {
@@ -1575,7 +1575,7 @@
    "outputs": [],
    "source": [
     "# check if any of the label is correlated to each other\n",
-    "y = np.vstack(task.train_table.df.withdraw_reasons.values)"
+    "y = np.vstack(task.get_table(\"train\").df.withdraw_reasons.values)"
    ]
   },
   {
@@ -1690,7 +1690,7 @@
     }
    ],
    "source": [
-    "sns.distplot(task.train_table.df.success_rate)\n",
+    "sns.distplot(task.get_table(\"train\").df.success_rate)\n",
     "sns.distplot(task.val_table.df.success_rate)"
    ]
   },
@@ -1718,7 +1718,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
