Change task.val_table to task.get_table("val")

--- a/trial/adverse/adverse_feature_eng.ipynb
+++ b/trial/adverse/adverse_feature_eng.ipynb
@@ -248,7 +248,7 @@
     "dataset = get_dataset(name='rel-trial', process=False)\n",
     "task = dataset.get_task('rel-trial-adverse', process=True)\n",
     "\n",
-    "val_df = task.val_table.df\n",
+    "val_df = task.get_table("val").df\n",
     "val_df = get_features(val_df)"
    ]
   },
@@ -553,7 +553,7 @@
     "train_df = task.get_table(\"train\").df\n",
     "train_df = get_features(train_df)\n",
     "\n",
-    "val_df = task.val_table.df\n",
+    "val_df = task.get_table("val").df\n",
     "val_df = get_features(val_df)\n",
     "\n",
     "from torch_frame import TaskType, stype\n",
