--- a/trial/site/site_feature_eng.ipynb
+++ b/trial/site/site_feature_eng.ipynb
@@ -234,7 +234,7 @@
     }
    ],
    "source": [
-    "val_df = task.val_table.df\n",
+    "val_df = task.get_table(\"val\").df\n",
     "val_df = get_features(val_df)"
    ]
   },
