--- a/trial/trial_eda.ipynb
+++ b/trial/trial_eda.ipynb
@@ -1231,15 +1231,15 @@
    "source": [
     "print('VAL\\n')\n",
     "\n",
-    "print(f'{len(task.val_table.df):,} samples over {task.val_table.df.nct_id.nunique():,} trials.')\n",
+    "print(f'{len(task.get_table(\"val\").df):,} samples over {task.get_table(\"val\").df.nct_id.nunique():,} trials.')\n",
     "print()\n",
     "print('Label Distribution:')\n",
-    "print(task.val_table.df.outcome.value_counts(normalize=True))\n",
+    "print(task.get_table(\"val\").df.outcome.value_counts(normalize=True))\n",
     "print()\n",
     "print('Temporal dist of samples:')\n",
-    "print(task.val_table.df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
+    "print(task.get_table(\"val\").df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
     "print()\n",
-    "print(f'User overlap between train and val: {len(set(task.get_table(\"train\").df.nct_id) & set(task.val_table.df.nct_id)):,}')"
+    "print(f'User overlap between train and val: {len(set(task.get_table(\"train\").df.nct_id) & set(task.get_table(\"val\").df.nct_id)):,}')"
    ]
   },
   {
@@ -1322,7 +1322,7 @@
     }
    ],
    "source": [
-    "sns.boxplot(task.val_table.df.num_of_adverse_events.values, showfliers=False)"
+    "sns.boxplot(task.get_table(\"val\").df.num_of_adverse_events.values, showfliers=False)"
    ]
   },
   {
@@ -1401,7 +1401,7 @@
     }
    ],
    "source": [
-    "len(task.val_table.df[task.val_table.df.num_of_adverse_events == 0])/len(task.val_table.df)"
+    "len(task.get_table(\"val\").df[task.get_table(\"val\").df.num_of_adverse_events == 0])/len(task.get_table(\"val\").df)"
    ]
   },
   {
@@ -1448,7 +1448,7 @@
     }
    ],
    "source": [
-    "sns.distplot(task.val_table.df.num_of_adverse_events)"
+    "sns.distplot(task.get_table(\"val\").df.num_of_adverse_events)"
    ]
   },
   {
@@ -1565,7 +1565,7 @@
     }
    ],
    "source": [
-    "len(task.val_table.df.nct_id.unique())"
+    "len(task.get_table(\"val\").df.nct_id.unique())"
    ]
   },
   {
@@ -1691,7 +1691,7 @@
    ],
    "source": [
     "sns.distplot(task.get_table(\"train\").df.success_rate)\n",
-    "sns.distplot(task.val_table.df.success_rate)"
+    "sns.distplot(task.get_table(\"val\").df.success_rate)"
    ]
   },
   {
