Change task.test_table to task.get_table("test")

--- a/trial/adverse/adverse_feature_eng.ipynb
+++ b/trial/adverse/adverse_feature_eng.ipynb
@@ -867,7 +867,7 @@
     }
    ],
    "source": [
-    "task.test_table.df"
+    "task.get_table("test").df"
    ]
   },
   {
@@ -927,7 +927,7 @@
     }
    ],
    "source": [
-    "test_df = task.test_table.df\n",
+    "test_df = task.get_table("test").df\n",
     "test_df = get_features(test_df)\n",
     "test_tf = train_dset.convert_to_tensor_frame(test_df.drop(DROP_COLS, axis=1))\n"
    ]
