--- a/trial/site/site_feature_eng.ipynb
+++ b/trial/site/site_feature_eng.ipynb
@@ -561,7 +561,7 @@
     }
    ],
    "source": [
-    "test_df = task.test_table.df\n",
+    "test_df = task.get_table(\"test\").df\n",
     "test_df = get_features(test_df)\n",
     "test_tf = train_dset.convert_to_tensor_frame(test_df.drop(DROP_COLS, axis=1))\n",
     "pred = gbdt.predict(tf_test=test_tf)\n",
