Replace process=True with download=True for get_dataset and get_task

--- a/trial/adverse/adverse_feature_eng.ipynb
+++ b/trial/adverse/adverse_feature_eng.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "def get_features(train_df):\n",
     "    dataset = get_dataset(name='rel-trial', process=False)\n",
-    "    task = dataset.get_task('rel-trial-outcome', process=True)\n",
+    "    task = dataset.get_task('rel-trial-outcome', download=True)\n",
     "    tables = dataset.get_db().table_dict\n",
     "\n",
     "    interventions_studies = tables['interventions_studies'].df\n",
@@ -246,7 +246,7 @@
    ],
    "source": [
     "dataset = get_dataset(name='rel-trial', process=False)\n",
-    "task = dataset.get_task('rel-trial-adverse', process=True)\n",
+    "task = dataset.get_task('rel-trial-adverse', download=True)\n",
     "\n",
     "val_df = task.get_table("val").df\n",
     "val_df = get_features(val_df)"
@@ -549,7 +549,7 @@
    ],
    "source": [
     "dataset = get_dataset(name='rel-trial', process=False)\n",
-    "task = dataset.get_task('rel-trial-adverse', process=True)\n",
+    "task = dataset.get_task('rel-trial-adverse', download=True)\n",
     "train_df = task.get_table(\"train\").df\n",
     "train_df = get_features(train_df)\n",
     "\n",
