--- a/trial/trial_eda.ipynb
+++ b/trial/trial_eda.ipynb
@@ -1090,7 +1090,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('rel-trial-outcome', process=True)"
+    "task = dataset.get_task('rel-trial-outcome', download=True)"
    ]
   },
   {
@@ -1262,7 +1262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('rel-trial-adverse', process=True)"
+    "task = dataset.get_task('rel-trial-adverse', download=True)"
    ]
   },
   {
@@ -1471,7 +1471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('rel-trial-withdrawal', process=True)"
+    "task = dataset.get_task('rel-trial-withdrawal', download=True)"
    ]
   },
   {
@@ -1632,7 +1632,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('rel-trial-site', process=True)"
+    "task = dataset.get_task('rel-trial-site', download=True)"
    ]
   },
   {
