--- a/stack/stack_eda.ipynb
+++ b/stack/stack_eda.ipynb
@@ -38,7 +38,7 @@
     }
    ],
    "source": [
-    "dataset = get_dataset(name='rel-stack', process=True)"
+    "dataset = get_dataset(name='rel-stack', download=True)"
    ]
   },
   {
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('user-engagement', process=True)"
+    "task = dataset.get_task('user-engagement', download=True)"
    ]
   },
   {
@@ -333,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('post-votes', process=True)"
+    "task = dataset.get_task('post-votes', download=True)"
    ]
   },
   {
@@ -600,7 +600,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('user-badge', process=True)"
+    "task = dataset.get_task('user-badge', download=True)"
    ]
   },
   {
