--- a/trial/site/site_feature_eng.ipynb
+++ b/trial/site/site_feature_eng.ipynb
@@ -84,7 +84,7 @@
    "source": [
     "def get_features(train_df):\n",
     "    dataset = get_dataset(name='rel-trial', process=False)\n",
-    "    task = dataset.get_task('rel-trial-site', process=True)\n",
+    "    task = dataset.get_task('rel-trial-site', download=True)\n",
     "    tables = dataset.get_db().table_dict\n",
     "\n",
     "    interventions_studies = tables['interventions_studies'].df\n",
@@ -202,7 +202,7 @@
    ],
    "source": [
     "dataset = get_dataset(name='rel-trial', process=False)\n",
-    "task = dataset.get_task('rel-trial-site', process=True)"
+    "task = dataset.get_task('rel-trial-site', download=True)"
    ]
   },
   {
