Adapt stack_eda to API changes

--- a/stack/stack_eda.ipynb
+++ b/stack/stack_eda.ipynb
@@ -11,6 +11,7 @@
     "import plotly.graph_objects as go\n",
     "import plotly.io as pio\n",
     "from relbench.datasets import get_dataset\n",
+    "from relbench.tasks import get_task\n",
     "\n",
     "import utils\n",
     "\n",
@@ -38,7 +39,7 @@
     }
    ],
    "source": [
-    "dataset = get_dataset(name='rel-stack', process=True)"
+    "dataset = get_dataset(name='rel-stack', download=True)"
    ]
   },
   {
@@ -100,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('user-engagement', process=True)"
+    "task = get_task('rel-stack', 'user-engagement', download=True)"
    ]
   },
   {
@@ -291,15 +292,15 @@
    "source": [
     "print('VAL\\n')\n",
     "\n",
-    "print(f'{len(task.val_table.df):,} samples over {task.val_table.df.OwnerUserId.nunique():,} users.')\n",
+    "print(f'{len(task.get_table(\"val\").df):,} samples over {task.get_table(\"val\").df.OwnerUserId.nunique():,} users.')\n",
     "print()\n",
     "print('Label Distribution:')\n",
-    "print(task.val_table.df.contribution.value_counts(normalize=True))\n",
+    "print(task.get_table(\"val\").df.contribution.value_counts(normalize=True))\n",
     "print()\n",
     "print('Temporal dist of samples:')\n",
-    "print(task.val_table.df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
+    "print(task.get_table(\"val\").df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
     "print()\n",
-    "print(f'User overlap between train and val: {len(set(task.get_table(\"train\").df.OwnerUserId) & set(task.val_table.df.OwnerUserId)):,}')"
+    "print(f'User overlap between train and val: {len(set(task.get_table(\"train\").df.OwnerUserId) & set(task.get_table(\"val\").df.OwnerUserId)):,}')"
    ]
   },
   {
@@ -333,7 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('post-votes', process=True)"
+    "task = get_task('rel-stack', 'post-votes', download=True)"
    ]
   },
   {
@@ -548,26 +549,26 @@
    "source": [
     "print('VAL\\n')\n",
     "\n",
-    "print(f'{len(task.val_table.df):,} samples over {task.val_table.df.PostId.nunique():,} posts.')\n",
+    "print(f'{len(task.get_table(\"val\").df):,} samples over {task.get_table(\"val\").df.PostId.nunique():,} posts.')\n",
     "print()\n",
     "print('Temporal dist of samples:')\n",
-    "print(task.val_table.df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
+    "print(task.get_table(\"val\").df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
     "print()\n",
     "print('Temporal dist of posts (first appearance):')\n",
     "print(\n",
     "    # timestamp is sorted in desc order ==> keep='last'\n",
-    "    task.val_table.df\n",
+    "    task.get_table(\"val\").df\n",
     "    .drop_duplicates(subset='PostId', keep='last')\n",
-    "    .groupby('timestamp').PostId.nunique() / task.val_table.df.PostId.nunique()\n",
+    "    .groupby('timestamp').PostId.nunique() / task.get_table(\"val\").df.PostId.nunique()\n",
     ")\n",
     "print()\n",
     "print('Label Distribution:')\n",
-    "mean = task.val_table.df.popularity.mean()\n",
-    "std = task.val_table.df.popularity.std()\n",
+    "mean = task.get_table(\"val\").df.popularity.mean()\n",
+    "std = task.get_table(\"val\").df.popularity.std()\n",
     "print(f'Mean (std): {mean:,.1f} ± {std:,.1f}')\n",
-    "print(f'Median: {task.val_table.df.popularity.quantile(0.5)}')\n",
-    "print(f'Prop zeros: {(task.val_table.df.popularity == 0).mean():.1%}')\n",
-    "fig = px.histogram(x=task.val_table.df.popularity + 1, log_x=True, log_y=True)\n",
+    "print(f'Median: {task.get_table(\"val\").df.popularity.quantile(0.5)}')\n",
+    "print(f'Prop zeros: {(task.get_table(\"val\").df.popularity == 0).mean():.1%}')\n",
+    "fig = px.histogram(x=task.get_table(\"val\").df.popularity + 1, log_x=True, log_y=True)\n",
     "# ^-- add 1 so log scale shows\n",
     "fig.update_layout(xaxis_title='Popularity', yaxis_title='Sample Count')"
    ]
@@ -600,7 +601,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('user-badge', process=True)"
+    "task = get_task('rel-stack', 'user-badge', download=True)"
    ]
   },
   {
@@ -767,20 +768,20 @@
    "source": [
     "print('VAL\\n')\n",
     "\n",
-    "print(f'{len(task.val_table.df):,} samples over {task.val_table.df.UserId.nunique():,} users.')\n",
+    "print(f'{len(task.get_table(\"val\").df):,} samples over {task.get_table(\"val\").df.UserId.nunique():,} users.')\n",
     "print()\n",
     "print('Label Distribution:')\n",
-    "print(task.val_table.df.WillGetBadge.value_counts(normalize=True))\n",
+    "print(task.get_table(\"val\").df.WillGetBadge.value_counts(normalize=True))\n",
     "print()\n",
     "print('Temporal dist of samples:')\n",
-    "print(task.val_table.df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
+    "print(task.get_table(\"val\").df.timestamp.dt.strftime('%Y-%m').value_counts(normalize=True).sort_index())\n",
     "print()\n",
     "print('Temporal dist of users (first appearance):')\n",
     "print(\n",
     "    # timestamp is sorted in desc order ==> keep='last'\n",
-    "    task.val_table.df\n",
+    "    task.get_table(\"val\").df\n",
     "    .drop_duplicates(subset='UserId', keep='last')\n",
-    "    .groupby('timestamp').UserId.nunique() / task.val_table.df.UserId.nunique()\n",
+    "    .groupby('timestamp').UserId.nunique() / task.get_table(\"val\").df.UserId.nunique()\n",
     ")"
    ]
   },
