Update notebooks to new task API

--- a/trial/site/site_feature_eng.ipynb
+++ b/trial/site/site_feature_eng.ipynb
@@ -67,6 +67,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from relbench.datasets import get_dataset\n",
+    "from relbench.tasks import get_task\n",
     "\n",
     "from tqdm import tqdm \n",
     "from pandarallel import pandarallel\n",
@@ -84,7 +85,7 @@
    "source": [
     "def get_features(train_df):\n",
     "    dataset = get_dataset(name='rel-trial', process=False)\n",
-    "    task = dataset.get_task('rel-trial-site', download=True)\n",
+    "    task = get_task('rel-trial', 'site-success', download=True)\n",
     "    tables = dataset.get_db().table_dict\n",
     "\n",
     "    interventions_studies = tables['interventions_studies'].df\n",
@@ -202,7 +203,7 @@
    ],
    "source": [
     "dataset = get_dataset(name='rel-trial', process=False)\n",
-    "task = dataset.get_task('rel-trial-site', download=True)"
+    "task = get_task('rel-trial', 'site-success', download=True)"
    ]
   },
   {
