--- a/trial/trial_eda.ipynb
+++ b/trial/trial_eda.ipynb
@@ -19,6 +19,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from relbench.datasets import get_dataset\n",
+    "from relbench.tasks import get_task\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -1090,7 +1091,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('rel-trial-outcome', download=True)"
+    "task = get_task('rel-trial', 'study-outcome', download=True)"
    ]
   },
   {
@@ -1262,7 +1263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('rel-trial-adverse', download=True)"
+    "task = get_task('rel-trial', 'study-adverse', download=True)"
    ]
   },
   {
@@ -1471,7 +1472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('rel-trial-withdrawal', download=True)"
+    "task = get_task('rel-trial', 'study-withdrawal', download=True)"
    ]
   },
   {
@@ -1632,7 +1633,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('rel-trial-site', download=True)"
+    "task = get_task('rel-trial', 'site-success', download=True)"
    ]
   },
   {
